MDEV-6209: Assertion `join->best_read < double(1.79769313486231570815e+308L ... - Use floating-point division in selectivity calculations.